--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,13 +7,22 @@ body
     margin: 0;
     padding: 0;
 }
-#container
+#cabecera
 {
-width: 70%;
+     background: #33a;
+color: white;
+box-shadow: 0px 2px 50px 0px rgba(0,0,0,0,0.5);
+font-weight: bold;
+margin: 0;
+padding: 0.sem;
+
+}
+#container #tagline
+{
+font-weight: normal;
 padding: 1em;
-text-align: left;
-border: 1px solid #ddd;
-margin: 0 auto;
+font-size: 0.8em;
+margin: 1em 0 0 0;
 }
 #container h1
 {
